testdata/grammars/bad/illegal_character_2.grammar
# This grammar has an illegal character in the nonterminal name.

S$ : `(` S$ `)` S$ % e
